--- a/style.css
+++ b/style.css
@@ -1,36 +1,25 @@
-body {
-    text-align: center;
-}
-
 #app {
     width: 100%;
     height: 800px;
-    background-color: deepskyblue;
+    background-color: aliceblue;
 }
 
-.line {
-    height: 6px;
-    background-color: black;
-    width: 70px;
-    margin: 8px auto;
+.container {
+    text-align: center;
 }
 
-#game {
-    width: 100%;
-    height: 800px;
-    background-color: blueviolet;
+#myCarousel {
+    background-color: crimson;
 }
 
-img {
-    transition: transform.2s;
+#myCarousel img {
+    height: 300px;
+    margin-top: 35px;
 }
 
-img:hover {
-    transform: scale(0.9)
-}
-
-#chattingbot {
-    width: 100%;
-    height: 800px;
-    background-color: deepskyblue;
+.carousel-inner p {
+    margin-bottom: 15px;
+    margin-top: 15px;
+    color: aliceblue;
+    font-size: 20px;
 }
